- Fix menu spacing on mobile devices - Update content

--- a/css/index.css
+++ b/css/index.css
@@ -99,10 +99,11 @@ a {
 }
 
 #navbar ul {
+  width: 100%;
   list-style: none;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 @media (min-width: 768px) {
@@ -363,7 +364,7 @@ a {
 #contact .content {
   display: flex;
   align-content: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
